FIX: row-gap amount

--- a/src/pages/Wishlist/styles/Wishlist.css
+++ b/src/pages/Wishlist/styles/Wishlist.css
@@ -19,6 +19,6 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  row-gap: 4rem;
+  row-gap: 2rem;
   column-gap: 2rem;
 }
